prevents text overflow

--- a/src/renderer/App.css
+++ b/src/renderer/App.css
@@ -34,5 +34,6 @@ body {
   position:fixed;
   bottom:0;
   left:0;
+  right:0;
   margin: 15px;
 }
